# yaadv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
Classes/: AppDelegate.cpp  AppDelegate.h  AudioHelper.cpp  AudioHelper.h  HelloWorldScene.cpp  HelloWorldScene.h
Classes/yaadv/: CharLabel.cpp  CharLabel.h  GameScene.cpp  GameScene.h  GameSystem.cpp  GameSystem.h  History.cpp  History.h  HistoryScene.cpp  HistoryScene.h  LoadScene.cpp  LoadScene.h  MainMenuScene.cpp  MainMenuScene.h  SaveData.cpp  SaveData.h  SaveScene.cpp  SaveScene.h  SettingScene.cpp  SettingScene.h  expr.cpp  expr.h  yaadv.h
Classes/yaadv/Control/: Between.cpp  Between.h  EasyButton.cpp  EasyButton.h  PopupLayer.cpp  PopupLayer.hpp  RadioButton.cpp  RadioButton.h  Slidebar.cpp  Slidebar.h  StringUtil.cpp  StringUtil.h
Classes/yaadv/ScriptReader/: BackgroundManager.cpp  BackgroundManager.h  BackgroundMusicManager.cpp  BackgroundMusicManager.h  CharacterManager.cpp  CharacterManager.h  SCX.cpp  SCX.h  ScriptCommand.cpp  ScriptCommand.h  ScriptReader.cpp  ScriptReader.cpp~  ScriptReader.h  ScriptReaderJSON.cpp  ScriptReaderJSON.h  ScriptReaderWREN.cpp  ScriptReaderWREN.h  ScriptReaderYASL.cpp  ScriptReaderYASL.h  ScriptReaderYASL.h~  SoundManager.cpp  SoundManager.h  ini.c  ini.h  json.cpp  json.hpp  yaadvConfig.cpp  yaadvConfig.h
Resources/yaadv/: config.json
Resources/yaadv/bgimage/: bgList.ini
Resources/yaadv/bgm/: bgmList.ini
Resources/yaadv/character/: characterList.ini  characterList.json
Resources/yaadv/img/: imgList.ini
Resources/yaadv/savedata/: savedata1.sav  savedata2.sav
Resources/yaadv/sound/: soundList.ini
doc/: genimg.rb  uiimg_loc_spec.txt  uiimg_size_spec.txt
lwf/cplusplus/cocos2dx/: lwf_cocos2dx_textttf.h
lwf/cplusplus/core/: lwf_core.cpp
lwf/project.win32/: libLwf.vcxproj
lwf/project.win32/Debug.win32/libLwf.tlog/: CL.12484.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libLwf.lastbuildstate
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.ios_mac/adv.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.linux/: Makefile  cmake_install.cmake
proj.win32/: adv.sln  adv.vcxproj  adv.vcxproj.filters
senario/: Makefile  csv2json.rb  game.xlsx  xlsx2csv  xlsx2csv.cpp
wren/: CMakeLists.txt
wren/src/include/: wren.h
wren/src/mini/: modules.c  ns.c  ns.h  ns.wren  ns.wren.inc  scheduler.c  scheduler.h  vm.c  vm.h
wren/src/optional/: wren_opt_meta.c  wren_opt_meta.h  wren_opt_random.h
wren/src/vm/: wren_compiler.c  wren_value.c  wren_vm.c
wren/wrenlib/: wrenlib.sln  wrenlib.vcxproj  wrenlib.vcxproj.filters
